src/antlr/AngularParser.java
// Generated from D:/AngularCompiler/Final/compiler1/src/antlr/AngularParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEMI=1, LET=2, CONST=3, FUNCTION=4, CLASS=5, CONSTRUCTOR=6, INTERFACE=7, 
		IMPORT=8, FROM=9, EXPORT=10, AT=11, TRUE=12, FALSE=13, AT_COMPONENT=14, 
		SELECTOR=15, TEMPLATE=16, STANDALONE=17, IMPORTS=18, STYLES=19, BINDING=20, 
		TWO_WAY_BINDING=21, PROPERTY_BINDING=22, STYLE=23, Alt=24, Src=25, NG_FOR=26, 
		NG_IF=27, CLICK_EVENT=28, StringLiteral=29, NumberLiteral=30, BooleanLiteral=31, 
		Identifier=32, WHITESPACE=33, COMMENT=34, DOT=35, ARRAY_START=36, ARRAY_END=37, 
		LBRACE=38, RBRACE=39, LPAREN=40, RPAREN=41, COLON=42, COMMA=43, EQUAL=44, 
		BACKTICK=45, DIRECTIVE=46, EVENT_BINDING=47, HTML_TAG_OPEN=48, HTML_TAG_CLOSE=49, 
		HTML_TAG_END=50, HTML_SELF_CLOSING=51, DIV_TAG=52, P_TAG=53, IMG_TAG=54, 
		H2_TAG=55, THIS=56;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_assignment = 2, RULE_decorator = 3, 
		RULE_componentDefinition = 4, RULE_componentOptions = 5, RULE_componentPropertyList = 6, 
		RULE_commaComponentProperty = 7, RULE_componentProperty = 8, RULE_template = 9, 
		RULE_htmlContent = 10, RULE_angularDirective = 11, RULE_htmlElement = 12, 
		RULE_divElement = 13, RULE_pElement = 14, RULE_imgElement = 15, RULE_imgAttributes = 16, 
		RULE_angularBinding = 17, RULE_angularExpression = 18, RULE_dotIdentifier = 19, 
		RULE_styleAttribute = 20, RULE_srcAttribute = 21, RULE_altAttribute = 22, 
		RULE_h2Element = 23, RULE_genericElement = 24, RULE_htmlAttributes = 25, 
		RULE_divAttributes = 26, RULE_pAttributes = 27, RULE_h2Attributes = 28, 
		RULE_angularEvent = 29, RULE_variableStatement = 30, RULE_array = 31, 
		RULE_arrayElements = 32, RULE_commaArrayElement = 33, RULE_arrayElement = 34, 
		RULE_object = 35, RULE_commaProperty = 36, RULE_property = 37, RULE_value = 38, 
		RULE_functionDeclaration = 39, RULE_interpolation = 40, RULE_classDeclaration = 41, 
		RULE_classBody = 42, RULE_constructorDeclaration = 43, RULE_interfaceDeclaration = 44, 
		RULE_interfaceBody = 45, RULE_importStatement = 46, RULE_importClause = 47, 
		RULE_commaImportSpecifier = 48, RULE_importSpecifier = 49, RULE_exportStatement = 50, 
		RULE_expression = 51, RULE_literal = 52, RULE_propertyBinding = 53, RULE_twoWayBinding = 54, 
		RULE_ngDirective = 55, RULE_parameterList = 56, RULE_commaParamterList = 57, 
		RULE_type = 58, RULE_commaIdentifier = 59, RULE_expressionList = 60, RULE_commaExpression = 61, 
		RULE_block = 62;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "assignment", "decorator", "componentDefinition", 
			"componentOptions", "componentPropertyList", "commaComponentProperty", 
			"componentProperty", "template", "htmlContent", "angularDirective", "htmlElement", 
			"divElement", "pElement", "imgElement", "imgAttributes", "angularBinding", 
			"angularExpression", "dotIdentifier", "styleAttribute", "srcAttribute", 
			"altAttribute", "h2Element", "genericElement", "htmlAttributes", "divAttributes", 
			"pAttributes", "h2Attributes", "angularEvent", "variableStatement", "array", 
			"arrayElements", "commaArrayElement", "arrayElement", "object", "commaProperty", 
			"property", "value", "functionDeclaration", "interpolation", "classDeclaration", 
			"classBody", "constructorDeclaration", "interfaceDeclaration", "interfaceBody", 
			"importStatement", "importClause", "commaImportSpecifier", "importSpecifier", 
			"exportStatement", "expression", "literal", "propertyBinding", "twoWayBinding", 
			"ngDirective", "parameterList", "commaParamterList", "type", "commaIdentifier", 
			"expressionList", "commaExpression", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'let'", "'const'", "'function'", "'class'", "'constructor'", 
			"'interface'", "'import'", "'from'", "'export'", "'@'", "'true'", "'false'", 
			"'@Component'", "'selector'", "'template'", "'standalone'", "'imports'", 
			"'styles'", null, null, null, "'style'", "'alt'", "'src'", "'*ngFor'", 
			"'*ngIf'", "'(click)'", null, null, null, null, null, null, "'.'", "'['", 
			"']'", "'{'", "'}'", "'('", "')'", "':'", "','", "'='", "'`'", "'\\*[a-zA-Z][a-zA-Z0-9_]*'", 
			"'\\([a-zA-Z][a-zA-Z0-9_]*\\)'", "'<'", "'>'", "'</'", "'/>'", "'div'", 
			"'p'", "'img'", "'h2'", "'this'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEMI", "LET", "CONST", "FUNCTION", "CLASS", "CONSTRUCTOR", "INTERFACE", 
			"IMPORT", "FROM", "EXPORT", "AT", "TRUE", "FALSE", "AT_COMPONENT", "SELECTOR", 
			"TEMPLATE", "STANDALONE", "IMPORTS", "STYLES", "BINDING", "TWO_WAY_BINDING", 
			"PROPERTY_BINDING", "STYLE", "Alt", "Src", "NG_FOR", "NG_IF", "CLICK_EVENT", 
			"StringLiteral", "NumberLiteral", "BooleanLiteral", "Identifier", "WHITESPACE", 
			"COMMENT", "DOT", "ARRAY_START", "ARRAY_END", "LBRACE", "RBRACE", "LPAREN", 
			"RPAREN", "COLON", "COMMA", "EQUAL", "BACKTICK", "DIRECTIVE", "EVENT_BINDING", 
			"HTML_TAG_OPEN", "HTML_TAG_CLOSE", "HTML_TAG_END", "HTML_SELF_CLOSING", 
			"DIV_TAG", "P_TAG", "IMG_TAG", "H2_TAG", "THIS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4294985120L) != 0)) {
				{
				{
				setState(126);
				statement();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentStmntContext extends StatementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AngularParser.SEMI, 0); }
		public AssignmentStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAssignmentStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAssignmentStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAssignmentStmnt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmntContext extends StatementContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ImportStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStmnt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunDecContext extends StatementContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public FunDecContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterFunDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitFunDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitFunDec(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDecContext extends StatementContext {
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public InterfaceDecContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterInterfaceDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitInterfaceDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitInterfaceDec(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassDecContext extends StatementContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ClassDecContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterClassDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitClassDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitClassDec(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorLblContext extends StatementContext {
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public DecoratorLblContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterDecoratorLbl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitDecoratorLbl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitDecoratorLbl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompDefContext extends StatementContext {
		public ComponentDefinitionContext componentDefinition() {
			return getRuleContext(ComponentDefinitionContext.class,0);
		}
		public CompDefContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterCompDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitCompDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitCompDef(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarStmntContext extends StatementContext {
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public VarStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterVarStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitVarStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitVarStmnt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExportStmntContext extends StatementContext {
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public ExportStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterExportStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitExportStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitExportStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new ImportStmntContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				importStatement();
				}
				break;
			case 2:
				_localctx = new DecoratorLblContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				decorator();
				}
				break;
			case 3:
				_localctx = new CompDefContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				componentDefinition();
				}
				break;
			case 4:
				_localctx = new VarStmntContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				variableStatement();
				}
				break;
			case 5:
				_localctx = new FunDecContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				functionDeclaration();
				}
				break;
			case 6:
				_localctx = new ClassDecContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(139);
				classDeclaration();
				}
				break;
			case 7:
				_localctx = new InterfaceDecContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(140);
				interfaceDeclaration();
				}
				break;
			case 8:
				_localctx = new ExportStmntContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(141);
				exportStatement();
				}
				break;
			case 9:
				_localctx = new AssignmentStmntContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(142);
				assignment();
				setState(143);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(AngularParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(AngularParser.Identifier, i);
		}
		public TerminalNode DOT() { return getToken(AngularParser.DOT, 0); }
		public TerminalNode EQUAL() { return getToken(AngularParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(Identifier);
			setState(148);
			match(DOT);
			setState(149);
			match(Identifier);
			setState(150);
			match(EQUAL);
			setState(151);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorContext extends ParserRuleContext {
		public TerminalNode AT_COMPONENT() { return getToken(AngularParser.AT_COMPONENT, 0); }
		public TerminalNode LPAREN() { return getToken(AngularParser.LPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(AngularParser.LBRACE, 0); }
		public ComponentOptionsContext componentOptions() {
			return getRuleContext(ComponentOptionsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(AngularParser.RBRACE, 0); }
		public TerminalNode RPAREN() { return getToken(AngularParser.RPAREN, 0); }
		public DecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterDecorator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitDecorator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitDecorator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratorContext decorator() throws RecognitionException {
		DecoratorContext _localctx = new DecoratorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decorator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(AT_COMPONENT);
			setState(154);
			match(LPAREN);
			setState(155);
			match(LBRACE);
			setState(156);
			componentOptions();
			setState(157);
			match(RBRACE);
			setState(158);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDefinitionContext extends ParserRuleContext {
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ComponentDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentDefinitionContext componentDefinition() throws RecognitionException {
		ComponentDefinitionContext _localctx = new ComponentDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_componentDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			decorator();
			setState(161);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentOptionsContext extends ParserRuleContext {
		public ComponentPropertyListContext componentPropertyList() {
			return getRuleContext(ComponentPropertyListContext.class,0);
		}
		public ComponentOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentOptions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentOptions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentOptions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentOptionsContext componentOptions() throws RecognitionException {
		ComponentOptionsContext _localctx = new ComponentOptionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_componentOptions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1015808L) != 0)) {
				{
				setState(163);
				componentPropertyList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
